Erro: "Expect 5" >> DeclVar

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
 .antlr/*
 grun.bat
 antlr4.bat
+Bat.interp
+Bat.tokens
+BatBaseListener.class
+BatBaseListener.java
+BatLexer.class
+BatLexer.interp
+BatLexer.java
+BatLexer.tokens
+BatListener.class
+BatListener.java
+BatParser$CmdContext.class
+BatParser$CmdDeclVarContext.class
+BatParser$CmdPrintContext.class
+BatParser$StartContext.class
+BatParser$TipoContext.class
+BatParser.class
+BatParser.java
+ControlVariavel.class
+Print.class
+Variavel.class
+antlr-4.13.0-complete.jar
