Nova versão Bat.g4

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,33 @@ ControlVariavel.class
 Print.class
 Variavel.class
 antlr-4.13.0-complete.jar
+ExemplosProfessor/*
+
+ExemplosProfessor/Variavel/varProfessor.java
+ExemplosProfessor/Variavel/variaveis.g4
+ExemplosProfessor/Simples/.antlr/tokParser.java
+ExemplosProfessor/Simples/.antlr/tokLexer.java
+ExemplosProfessor/Simples/.antlr/tokLexer.interp
+ExemplosProfessor/Simples/.antlr/tok.interp
+ExemplosProfessor/Outro/.antlr/testeParser.java
+ExemplosProfessor/Outro/.antlr/testeLexer.java
+ExemplosProfessor/Outro/.antlr/testeLexer.interp
+ExemplosProfessor/Outro/.antlr/teste.interp
+ExemplosProfessor/Impressao/.antlr/aulaParser.java
+ExemplosProfessor/Impressao/.antlr/aulaLexer.java
+ExemplosProfessor/Impressao/.antlr/aulaLexer.interp
+ExemplosProfessor/Impressao/.antlr/aula.interp
+ExemplosProfessor/Impressao/.antlr/aula.interp
+ExemplosProfessor/Impressao/.antlr/aulaLexer.interp
+ExemplosProfessor/Impressao/.antlr/aulaLexer.java
+ExemplosProfessor/Impressao/.antlr/aulaParser.java
+ExemplosProfessor/Outro/.antlr/teste.interp
+ExemplosProfessor/Outro/.antlr/testeLexer.interp
+ExemplosProfessor/Outro/.antlr/testeLexer.java
+ExemplosProfessor/Outro/.antlr/testeParser.java
+ExemplosProfessor/Simples/.antlr/tok.interp
+ExemplosProfessor/Simples/.antlr/tokLexer.interp
+ExemplosProfessor/Simples/.antlr/tokLexer.java
+ExemplosProfessor/Simples/.antlr/tokParser.java
+ExemplosProfessor/*
+test.java
